# gitian-verifier

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  gitian-verifier.cpp  util.cpp  util.h
